--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
       body {
         width: 100vw;
         background: rgb(204, 204, 204);
+        padding: 0;
       }
     </style>
   </head>
-  <body class="px-0">
-    <div
-      style="height: 100%; padding: 0"
-      class="w-full bg-amber-200 px-0"
-      id="root"
-    ></div>
+  <body>
+    <div style="height: 100%; padding: 0; width: 100%" id="root"></div>
 
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
